# blog-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  mypy.ini  pyproject.toml
blog/: requirements.txt
blog/api/: admin.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
blog/api/migrations/: 0001_initial.py  0002_comment_changed_by_comment_created_by_and_more.py  0003_rename_updated_at_post_changed_at_comment_changed_at.py  0004_alter_comment_changed_at_alter_post_changed_at.py  0005_alter_post_changed_at.py  0006_alter_comment_changed_at.py  0007_alter_comment_changed_by_alter_comment_created_by.py  0008_alter_post_changed_by_alter_post_created_by.py  0009_alter_comment_changed_by_alter_post_changed_by.py  0010_alter_comment_changed_at_alter_post_changed_at.py  0011_alter_comment_changed_at_alter_post_changed_at.py  0012_alter_comment_created_by_alter_post_created_by.py  0013_alter_comment_post.py  0014_alter_comment_changed_by_alter_comment_created_by_and_more.py  0015_alter_comment_post.py
blog/blog/: pagination.py  settings.py  urls.py
